fix: add gap between name and status in figcaption

--- a/style.scss
+++ b/style.scss
@@ -214,6 +214,7 @@ body {
                 .box-name {
                     display: flex;
                     flex-direction: column;
+                    gap: 0.25rem;
 
                     h2 {
                         color: var(--neutral-white);
